# medagent-core

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DAILY_IMPROVEMENTS.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SAFETY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  security.yml
data/: sample_fhir_bundle.json
data/kb_index/: docs.jsonl
docs/: CONFIGURATION.md  EXAMPLES.md  PERFORMANCE.md  PULL_SHARK_LOG.md  TROUBLESHOOTING.md
docs/adr/: ADR-014-HTTP-client.md  ADR-021-async-task-queue.md  ADR-027-async-task-queue.md  ADR-055-database-ORM.md  ADR-058-config-management.md
docs/guides/: ANTIBIOTIC_STEWARDSHIP_GUIDE.md  BLACK_BOX_WARNING_GUIDE.md  COMBINED_RENAL_HEPATIC_GUIDE.md  DRUG_FOOD_INTERACTION_GUIDE.md  OPIOID_MED_GUIDE.md  PEDIATRIC_DOSE_GUIDE.md  QTC_DDI_GUIDE.md  STOPP_START_GUIDE.md
docs/releases/: v0.1.20.md  v0.2.17.md  v0.2.30.md  v0.3.0.md  v0.3.20.md  v0.3.28.md  v0.4.16.md  v0.5.22.md  v0.6.17.md  v0.6.2.md  v0.6.20.md  v0.6.7.md  v0.7.28.md
scripts/: benchmark.py  demo.py  eval_drugbank.py  eval_medqa.py  health_check.py  ingest_kb.py
src/medagent/: __init__.py  config.py  logging_config.py  models.py
src/medagent/agent/: __init__.py  audit.py  state_machine.py
src/medagent/api/: __init__.py  main.py  schemas.py
src/medagent/extraction/: __init__.py  fhir_parser.py  ner.py
src/medagent/llm/: __init__.py  adapters.py  base.py  router.py  validator.py
src/medagent/reasoning/: __init__.py  bayesian.py  engine.py
src/medagent/retrieval/: __init__.py  drug_interaction.py  local_kb.py  orchestrator.py  pubmed.py
src/medagent/safety/: __init__.py  allergy_checker.py  antibiotic_stewardship_checker.py  anticholinergic_burden_checker.py  beers_criteria_checker.py  black_box_warning_checker.py  combined_renal_hepatic_checker.py  disclaimer.py  drug_food_interaction_checker.py  duplicate_therapy.py  hepatic_dose_checker.py  lab_critical_value_checker.py  opioid_med_checker.py  pediatric_dose_checker.py  pii_hasher.py  pregnancy_checker.py  qt_prolongation_checker.py  qtc_ddi_checker.py  renal_dose_checker.py  scope_enforcer.py  serotonin_syndrome_checker.py  stopp_start_checker.py
tests/unit/: test_models.py
tests/unit/agent/: test_audit.py  test_state_machine.py
tests/unit/api/: __init__.py  test_health.py
tests/unit/extraction/: __init__.py  test_fhir_parser.py  test_ner.py
tests/unit/llm/: test_adapters.py  test_router.py  test_validator.py
tests/unit/reasoning/: test_bayesian.py  test_engine.py
tests/unit/retrieval/: __init__.py  test_drug_interaction.py  test_local_kb.py  test_pubmed.py
tests/unit/safety/: __init__.py  test_allergy_checker.py  test_antibiotic_stewardship_checker.py  test_anticholinergic_burden_checker.py  test_beers_criteria_checker.py  test_black_box_warning_checker.py  test_combined_renal_hepatic_checker.py  test_drug_food_interaction_checker.py  test_duplicate_therapy.py  test_hepatic_dose_checker.py  test_lab_critical_value_checker.py  test_opioid_med_checker.py  test_pediatric_dose_checker.py  test_pii_hasher.py  test_pregnancy_checker.py  test_qt_prolongation_checker.py  test_qtc_ddi_checker.py  test_renal_dose_checker.py  test_scope_enforcer.py  (+2 more)
