[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medagent-core"
version = "0.1.0"
description = "Auditable biomedical AI decision support agent — multi-hop clinical reasoning, drug interaction detection, and safety-first agentic architecture"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "MedAgent Core Contributors" }]
keywords = [
  "medical-ai",
  "clinical-decision-support",
  "biomedical-nlp",
  "llm-agents",
  "drug-discovery",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  # Core agentic
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  # FastAPI
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  # LLM integrations
  "openai>=1.35.0",
  "anthropic>=0.29.0",
  "google-generativeai>=0.7.0",
  # NLP / biomedical
  "spacy>=3.7.4",
  # Retrieval
  "rank-bm25>=0.2.2",
  "numpy>=1.26.0",
  # Async
  "anyio>=4.4.0",
  "aiohttp>=3.9.5",
  # Utilities
  "tenacity>=8.3.0",
  "structlog>=24.2.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "orjson>=3.10.5",
  # Storage
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.1",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.1",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0",
]

[project.scripts]
medagent = "medagent.api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/medagent"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "S",   # bandit security
  "N",   # pep8-naming
  "RUF", # ruff-specific rules
]
ignore = [
  "S101",   # assert usage (used for invariants)
  "ANN401", # Any type
  "S104",   # intentional bind to 0.0.0.0 in config default
  "RUF001", # allow en-dash in medical strings (clinical ranges)
  "RUF002", # allow special chars in docstrings (math notation)
  "RUF003", # allow special chars in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=60"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src/medagent"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
